project upgrade - upgrade to spring-boot 3.0.2; - upgrade to springdoc-openapi 2.0.2; - upgrade to mapstruct 1.5.3.Final; - upgrade to confluent pom depensency and docker images 7.3.1; - replace mysql.mysql-connector-java dependency to com.mysql.mysql-connector-j; - upgrade to mysql docker image 5.7.41; - upgrade to elasticsearch docker image 8.5.3.